<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/counterNameActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter_name"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/countButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/total_count"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/editCounterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_counter"
            android:layout_weight="1" />

    </TableRow>

</TableLayout>
